--- a/src/pages/LandingPage/home.scss
+++ b/src/pages/LandingPage/home.scss
@@ -68,7 +68,7 @@
   height: 100%;
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: auto 100%;
+  background-size: cover;
   z-index: -1;
   pointer-events: auto;
   opacity: 0;
